<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:enabled="true"
        android:key="@string/pref_category_key_camera"
        android:title="@string/pref_category_title_camera">

        <ListPreference
            android:key="@string/pref_key_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camera_target_resolution" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_pose_detection">
        <ListPreference
            android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast"
            android:entries="@array/pref_entries_values_pose_detector_performance_mode"
            android:entryValues="@array/pref_entry_values_pose_detector_performance_mode"
            android:key="@string/pref_key_live_preview_pose_detection_performance_mode"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_pose_detector_performance_mode" />

    </PreferenceCategory>
</PreferenceScreen>
